--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>MALZ - Index</title>
   
  <!-- Favicons -->
-  <link href="assets/img/logo.jpeg" rel="icon">
+  <link href="assets/img/malzicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
 <!-- Google Fonts -->
@@ -31,7 +31,7 @@
 			<div class="flex-container align-center">
 				<div class="flex-item-3 headtop">
 					<div class="mentor">
-						<h1><a href="#">MALZ</a></h1>
+						<img src="assets/img/malzgreenlogo1.jpeg" class="malzlogo" alt="image">
 					</div>
 				</div>
 				<div class="flex-item-9 headtoptwo">
@@ -44,26 +44,24 @@
 					</div>
 				</div>
 			</div>
-	
-
-
-	</div>
+		</div>
 	</header><!-- End Header -->	
 	
 	
 	
 	<!-- ======= banner Section ======= -->
   <section id="banner" class="d-flex justify-content-center align-items-center">
-    <div class="container flex-container">
-	<div data-aos="zoom-in">
-		<div class="content"  data-aos="zoom-in" data-aos-delay="100">
-      <h4 id="contenthead" class="flex-item-12" >"Proprietary Herbal Tooth Powder"</h4>
-      <h4 id="contenthead" class="flex-item-12">"Proprietary Herbal Tooth Powder"</h4>
-	  
-      <h2>"Experience a healthier smile with our all-natural organic tooth powder."</h2>
-      <h3>"ACTIVATED CHARCOAL TOOTHPOWDER"</h3>
-	  </div>
-	  <div>
+    <div class="container ">
+		<div  class="flex-container bancon">
+		<div data-aos="zoom-in" data-aos-delay="100" >
+		<h5>"Proprietary Herbal Tooth Powder"</h5>
+			<div class="content ">
+				  <h4 id="contenthead" class="flex-item-12" >"ACTIVATED CHARCOAL TOOTHPOWDER"</h4>
+				  <h4 id="contenthead" class="flex-item-12">"ACTIVATED CHARCOAL TOOTHPOWDER"</h4>
+				  <h2>"Experience a healthier smile with our all-natural organic tooth powder."</h2>
+			</div>
+			</div>
+		</div>
     </div>
   </section><!-- End banner -->
 
@@ -74,7 +72,7 @@
 		<div class="container">
 			<div class="flex-container">
 				<div class="flex-item-12" data-aos="zoom-in">
-					<img src="assets/img/banner1.jpeg" class="img-banner" alt="image">
+					<img src="assets/img/malzlable.png" class="img-banner" alt="image">
 				</div>
 			</div>
 		</div>
@@ -82,7 +80,7 @@
 	<section class="about">
 		<div class="container">
 			<div class="flex-container">
-				<div class="flex-item-6 imgcon">
+				<div class="flex-item-8 imgcon">
 					<div class="about-items" data-aos="zoom-in">
 						<h3>Our malz herbal tooth powder is prepared with Activated carbon 
 						(coconut shell) as the main ingredient plus mint, clove, camphor(+) and  salt.</h3>
@@ -100,9 +98,12 @@
 						</p>
 					</div>
 				</div>
-				<div class="flex-item-6 imgcon">
-					<div class="about-image-img" data-aos="zoom-in">
-						<img class="imagepradect" src="assets/img/bottle.jpg" width="100%" height="450px">
+				<div class="flex-item-4 imgcon">
+					<div class="about-image-img video-wrap" data-aos="zoom-in">
+						<video width="350" height="350" autoplay playsinline loop>
+							<source src="assets/img/vid.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video>
 					</div>
 				</div>
 			</div>
@@ -129,7 +130,7 @@
               <div class="address">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <h4>Location:</h4>
-                <p>Ankalinks, No,134/116, Kamarajapuram 4th <br>
+                <p>Ankalinks/Malz, No,134/116, Kamarajapuram 4th <br>
 				 Street, Nungambakam, Chennai-600034</p>
               </div>
 
@@ -168,7 +169,7 @@
 				<div class="flex-item-8 imgcon">
 					<div class="address" data-aos="zoom-in">
 						<h1>MALZ</h1>
-						<p class="add">Ankalinks, No,134/116, Kamarajapuram 4th Street, Nungambakam, Chennai-600034</p>
+						<p class="add">Ankalinks/Malz, No,134/116, Kamarajapuram 4th Street, Nungambakam, Chennai-600034</p>
 						<div class="con">
 							<p><b>Phone:</b> +91 7305447292</p>
 							<p><b>Email:</b>  malzproductsindia@gmail.com</p>
@@ -207,6 +208,32 @@
 
 <script>
   AOS.init();
+  
+  window.addEventListener('load', videoScroll);
+window.addEventListener('scroll', videoScroll);
+
+function videoScroll() {
+
+  if ( document.querySelectorAll('video[autoplay]').length > 0) {
+    var windowHeight = window.innerHeight,
+        videoEl = document.querySelectorAll('video[autoplay]');
+
+    for (var i = 0; i < videoEl.length; i++) {
+
+      var thisVideoEl = videoEl[i],
+          videoHeight = thisVideoEl.clientHeight,
+          videoClientRect = thisVideoEl.getBoundingClientRect().top;
+
+      if ( videoClientRect <= ( (windowHeight) - (videoHeight*.5) ) && videoClientRect >= ( 0 - ( videoHeight*.5 ) ) ) {
+        thisVideoEl.play();
+      } else {
+        thisVideoEl.pause();
+      }
+
+    }
+  }
+
+}
 </script>
 
 </body>
