--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <div class="address">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <h4>Location:</h4>
-                <p>Ankalinks/Malz, No,134/116, Kamarajapuram 4th <br>
+                <p>Malz, No,134/116, Kamarajapuram 4th <br>
 				 Street, Nungambakam, Chennai-600034</p>
               </div>
 
@@ -154,7 +154,7 @@
 
           <div class="flex-item-7 imgcon">
 			<div data-aos="zoom-in">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3886.7176767230358!2d80.23642897420626!3d13.053634113076171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52674d969ab77b%3A0xdc8f15a9bff320cc!2sANKALINKS!5e0!3m2!1sen!2sin!4v1696777808294!5m2!1sen!2sin" width="100%" height="255" style="border:0; margin-top:0px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d242.91985157430207!2d80.23887913099057!3d13.053637389648388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5267ad8e89bacb%3A0x7b7071709c7e2d8d!2sMALZ%20Products%20India!5e0!3m2!1sen!2sin!4v1700144352982!5m2!1sen!2sin" width="100%" height="255px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
           </div>
 
@@ -169,7 +169,7 @@
 				<div class="flex-item-8 imgcon">
 					<div class="address" data-aos="zoom-in">
 						<h1>MALZ</h1>
-						<p class="add">Ankalinks/Malz, No,134/116, Kamarajapuram 4th Street, Nungambakam, Chennai-600034</p>
+						<p class="add">Malz, No,134/116, Kamarajapuram 4th Street, Nungambakam, Chennai-600034</p>
 						<div class="con">
 							<p><b>Phone:</b> +91 7305447292</p>
 							<p><b>Email:</b>  malzproductsindia@gmail.com</p>
