--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				</div>
 				<div class="flex-item-4 imgcon">
 					<div class="about-image-img video-wrap" data-aos="zoom-in">
-						<video width="350" height="350" autoplay playsinline loop>
+						<video width="100%" height="auto" autoplay playsinline loop>
 							<source src="assets/img/vid.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
